Stop using deprecated method